Bug 882086 - [MMS] [UX] Message thread. Spacing between the last bubble and input field should be 1.5 rem r=julienw
Previously, the spacing after the final message "bubble" was set to an
arbitrary value of 7rem. This patch sets the spacing to the specified
amount, and ensures that the spacing remains consistent as the Compose
field grows and shrinks (resolving "Bug 875362 - [MMS] Cannot scroll to
bottom of thread list as input field grows")

This patch also addresses an issue where the Compose field could grow to
completely cover the message thread. Now, a "sliver" of space is
reserved to maintain a visual affordance to the underlying thread.

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -286,9 +286,15 @@ section[role="region"].new > header:first-child form {
 
 .article-list {
   -moz-box-sizing: border-box;
+  z-index: 5;
+
+  /* The bottom border is used to offset the messages as the Compose field
+   * grows and shrinks, prevent occlusion. (see Bug 748518 - padding-bottom is
+   * ignored with overflow:auto;) */
+  border-bottom-color: transparent;
+  border-bottom-style: solid;
   background: none repeat scroll 0 0 #E4E4E4;
   text-align: left;
-  z-index: 5;
 }
 
 .article-list header:first-child {
@@ -307,7 +313,7 @@ section[role="region"].new > header:first-child form {
 }
 
 .article-list[data-type="list"] > ul:last-child {
-  margin-bottom: 7rem;
+  margin-bottom: 1.5rem;
 }
 
 .article-list header,
